--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,19 @@ body {
 	text-align: center;
 }
 
+.errorBtn {
+	padding: 20px;
+	background-color: rgb(128, 0, 0);
+	color: rgb(255, 255, 255);
+	cursor: pointer;
+	margin: 5px;
+}
+
+.errorBtn:hover {
+	background-color: rgb(255, 255, 255);
+	color: rgb(128, 0, 0);
+}
+
 @media (max-width: 400px) {
 	.homeSection {
 		min-height: 80vh;
